# stai

./: .gitmodules  CMakeLists.txt  LICENSE  exports.yml
.github/workflows/: build.yaml
include/stai/: stai.h
src/: hooks.cpp  hooks.h  slab.c  slab.h  stai.cpp  std++.h  std.c  std.h  stubs.h  stubs.s  types.h
test_plugin/: CMakeLists.txt  main.c
